[project]
name = "combobox-add-to-frame"
version = "0.1.2"
description = ""
authors = [
    {name = "Hinkan",email = "henrik.pet93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scroll-windows (>=0.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
